--- a/requirements.txt
+++ b/requirements.txt
@@ -1,63 +1,39 @@
-# requirements.txt
-# Versions compatibles testées pour le projet ESI Triage
+# Requirements optimisés pour Streamlit Cloud
+# ESI Triage Assistant v4.0 - Déploiement production
 
-# Core ML/NLP
-torch==2.0.1
-torchvision==0.15.2
-torchaudio==2.0.2
-transformers==4.35.0
-tokenizers==0.14.1
-huggingface-hub==0.17.3
-accelerate==0.24.1
+# ==================== CORE ML/NLP ====================
+# PyTorch CPU-only (plus léger que GPU version)
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.1.0+cpu
+transformers==4.35.2
+tokenizers==0.15.0
+huggingface-hub==0.20.1
+sentencepiece==0.1.99
 
-# Data Processing
-pandas==2.0.3
-numpy==1.24.3
-scikit-learn==1.3.0
+# ==================== STREAMLIT ====================
+streamlit==1.29.0
 
-# Visualisation
-matplotlib==3.7.2
-seaborn==0.12.2
-plotly==5.17.0
+# ==================== DATA PROCESSING ====================
+pandas==2.1.4
+numpy==1.24.4
+scikit-learn==1.3.2
 
-# Utilitaires
-jupyter==1.0.0
-notebook==7.0.4
-streamlit==1.28.1
-tensorboard==2.14.0
+# ==================== AUDIO & SPEECH ====================
+faster-whisper==0.10.0
+soundfile==0.12.1
+audio-recorder-streamlit==0.0.8
+pydub==0.25.1
 
-# Explicabilité (optionnel)
-shap==0.42.1
-lime==0.2.0.1
+# ==================== NER ====================
+seqeval==1.2.2
 
-# Autres
+# ==================== PDF GENERATION ====================
+reportlab==4.0.9
+
+# ==================== TRANSLATION ====================
+deep-translator==1.11.4
+requests==2.31.0
+
+# ==================== UTILITIES ====================
 tqdm==4.66.1
-pyarrow==14.0.1
-datasets==2.14.5
-
-# Audio & Speech Recognition
-faster-whisper>=0.10.0
-soundfile>=0.12.1
-audio-recorder-streamlit>=0.0.8
-pydub>=0.25.1
-# webrtcvad>=2.0.10  # Optionnel - nécessite Visual C++ Build Tools
-
-# NER-specific dependencies
-seqeval>=1.2.2  # Entity-level F1 metrics for token classification
-
-# PDF Generation
-reportlab>=4.0.0
-
-# Excel Export (optionnel mais recommandé)
-openpyxl>=3.1.0
-xlsxwriter>=3.1.0
-
-# MLOps - Model & Dataset Tracking
-mlflow>=2.9.0
-minio>=7.2.0
-boto3>=1.33.0  # For S3 compatibility
-
-# Translation - Traduction intelligente multilingue
-deep-translator>=1.11.0  # Google Translate API (gratuit, stable, sans conflit)
-# argostranslate>=1.8.0  # Alternative locale (optionnel)
-requests>=2.31.0  # Pour DeepL API (optionnel)
+python-dateutil==2.8.2
